--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="col-md-4">
                         <img src="./assets/images/me (1).jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="col-md-7 offset-1">
+                    <div class="col-md-7 offset-md-1">
                         <div class="about-details d-flex flex-column justify-content-center gap-3 h-100">
                             <h3 class="fs-2 fw-bold">Robin Steel</h3>
                             <h4 class="text__primary fs-3">Creative UI/UX Designer, Developer.</h4>
@@ -97,6 +97,121 @@
                 </div>
 
             </div>
+        </section>
+        <section class="Portfolio py-5">
+            <div class="title text-center mb-5">
+                <h2 class="fs-1 fw-bold text-uppercase">portfolio</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <nav>
+                    <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+                        <button class="nav-link active fw-bold" id="nav-all-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-all" type="button" role="tab" aria-controls="nav-all"
+                            aria-selected="true">ALL</button>
+                        <button class="nav-link fw-bold" id="nav-dev-tab" data-bs-toggle="tab" data-bs-target="#nav-dev"
+                            type="button" role="tab" aria-controls="nav-dev" aria-selected="false">DEV</button>
+                        <button class="nav-link fw-bold" id="nav-web-tab" data-bs-toggle="tab" data-bs-target="#nav-web"
+                            type="button" role="tab" aria-controls="nav-web" aria-selected="false">WEB</button>
+                        <button class="nav-link fw-bold" id="nav-web-design" data-bs-toggle="tab"
+                            data-bs-target="#nav-design" type="button" role="tab" aria-controls="nav-design"
+                            aria-selected="false">DESIGN</button>
+
+
+                    </div>
+                </nav>
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab"
+                        tabindex="0">
+                        <div class="container-fluid">
+                            <div class="row g-5">
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/1.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/2.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/3.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/4.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/5.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/6.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-dev" role="tabpanel" aria-labelledby="nav-dev-tab" tabindex="0">
+                        <div class="container-fluid">
+                            <div class="row g-5">
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/4.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-web" role="tabpanel" aria-labelledby="nav-web-tab" tabindex="0">
+                        <div class="container-fluid">
+                            <div class="row g-5">
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/6.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="tab-pane fade" id="nav-design" role="tabpanel" aria-labelledby="nav-design-tab"
+                        tabindex="0">
+                        <div class="container-fluid">
+                            <div class="row g-5">
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/1.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/2.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/3.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="portfolio-img">
+                                        <img src="./assets/images/5.jpg" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
